minor edits and bib refs.

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -100,7 +100,7 @@
 
 \begin{abstract}
 
-%condiser the following? .............
+%consider the following? .............
 
 
 %   %Digital arts practices can allow for the archival of interaction
@@ -109,17 +109,17 @@
 % processing and data mining.
   
 %   %In this note we describe a data archive for an iPad
-% musical-ensemble performance practice which has included %concerts,
+% musical-ensemble performance practice which has included concerts,
 % demonstrations and formal HCI studies of groups of musicians over more
-% than two years. Our corpus contains data for %150 performances,
+% than two years. Our corpus contains data for 150 performances,
 % rehearsals, and demonstrations, involving some 100 different musicians
-% and several different iPad apps. %At the lowest level, data for each
+% and several different iPad apps. At the lowest level, data for each
 % musician in a particular performance was archived as Apple iOS
 % callback methods for touching and swiping. Subsequent data analysis
 % has been undertaken by first classifying these data into higher level
 % gesture types and then describing the transitions between these
-% gestures for each artist as a function of time. We %find that a
-% transition-matrix measure, which we call ``flux'', can be %used to
+% gestures for each artist as a function of time. We find that a
+% transition-matrix measure, which we call ``flux'', can be used to
 % distinguish different performance types and contexts, as well as
 % different phases (beginning, middle and end) of all of the
 % performances in our corpus.
@@ -139,7 +139,7 @@
 %   \url{http://acm.org/about/class/1998/} for the full list of ACM
 %   classifiers. This section is required.}{}{}
 
-\section{General comments}
+%\section{General comments}
 
 % \begin{itemize}
 % \item we should be clear (and careful) where we're talking about
@@ -186,8 +186,9 @@ time, the accumulation of new-media interaction log data might allow
 data-mining techniques to be deployed to potentially describe
 universal features of such interaction.
 
-
-%Additionally, a wider dissemination of such log data will better support the replication of findings in HCI research [ref:Wilson, Max L., et al. "RepliCHI-CHI should be replicating and validating results more: discuss." CHI'11 Extended Abstracts on Human Factors in Computing Systems. ACM, 2011.]
+% Additionally, a wider dissemination of such log data will better
+% support the replication of findings in HCI
+% research~\cite{Wilson:2011ve}
 
 It is a feature of creative expression in the arts that highly skilled
 practitioners exploit simple tools to produce works of beauty whether
@@ -215,17 +216,16 @@ sessions where the participants used custom-built, touch-screen apps
 on Apple iPad devices. Although several different apps have been
 included in our corpus,
 % TODO: should there be a citation here?
- they all shared
-the simple mode of interaction where the majority of the screen could
-be used for free-form touch interactions; tapping produced short
-sounds, while swiping or swirling produced long sounds with the volume
-proportional to the velocity of the moving touch point. Apart from
-this commonality, our apps featured different palettes of available
-sounds and modes of synthesis, different arrangements of sounds on the
-iPad screens, different kinds of visual display and feedback,
-different kinds of networked interactions (between the iPads in an
-ensemble and with a central server), as well as a variety of special
-features for each app.
+they all shared the simple mode of interaction where the majority of
+the screen could be used for free-form touch interactions; tapping
+produced short sounds, while swiping or swirling produced long sounds
+with the volume proportional to the velocity of the moving touch
+point. Apart from this commonality, our apps featured different
+palettes of available sounds and modes of synthesis, different
+arrangements of sounds on the iPad screens, different kinds of visual
+display and feedback, different kinds of networked interactions
+(between the iPads in an ensemble and with a central server), as well
+as a variety of special features for each app.
 
 In all of our data-collection sessions, every touch
 interaction---every touch down, dragging movement and touch up---was
@@ -252,9 +252,11 @@ together with the interaction data for each session to record the
 recorded sessions by context and type is shown in Figure
 \ref{fig:count-data}.
 
-NOTE: FORGET ABOUT THE DEMONSTRATIONS AND THE DATA COLLECTION PARTS OF THE CORPUS. THEY JUST MAKE THE STORY VAGUE. YOU DON'T INCLUDE THEM IN YOUR ANALYSIS AT ALL.
+% TODO: NOTE: FORGET ABOUT THE DEMONSTRATIONS AND THE DATA COLLECTION
+% PARTS OF THE CORPUS. THEY JUST MAKE THE STORY VAGUE. YOU DON'T
+% INCLUDE THEM IN YOUR ANALYSIS AT ALL.
 
-NOTE: NEED TO MODIFY ALL OF THESE GRAPHS, TABLES AND FIGURES.
+% TODO: NOTE: NEED TO MODIFY ALL OF THESE GRAPHS, TABLES AND FIGURES.
 
 
 
@@ -560,10 +562,14 @@ increasingly concerned with interactions that happen in-the-wild,
 where the interactions of many users may be collected without the
 opportunity to survey or interview users. We suggest that analysing
 interaction-state transitions using matrices and simple measures can
-lead to new insights into HCI interactions outside the lab.
+lead to new insights into HCI interactions outside the lab. 
+
 
 %TODO Mention Manovich transmutation stuff
+The macro-gestures that these processes reveal could also be used as
+the basis for new works of new media art~\cite{Manovich:2002ly}.
 
+\pagebreak
 \bibliographystyle{SIGCHI-Reference-Format}
 \bibliography{references}
 
