--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -1,7 +1,36 @@
+@article{Breiman:2001kx,
+	Author = {Breiman, Leo},
+	Journal = {Machine Learning},
+	Number = {1},
+	Pages = {5-32},
+	Title = {Random Forests},
+	Volume = {45},
+	Year = {2001}}
+
+
 @misc{Dobrushin:fk,
 	Author = {R.L. Dobrushin and V.V. Prelov},
 	Title = {Entropy. Encyclopedia of Mathematics.},
   url = {http://www.encyclopediaofmath.org/index.php?title=Entropy&oldid=15099}
+}
+
+
+@inproceedings{England:2014ys,
+ author = {England, David and Spence, Jocelyn and Latulipe, Celine and Edmonds, Ernest and Candy, Linda and Schiphorst, Thecla and Bryan-Kinns, Nick and Woolford, Kirk},
+ title = {Curating the Digital: Spaces for Art and Interaction},
+ booktitle = {CHI '14 Extended Abstracts on Human Factors in Computing Systems},
+ series = {CHI EA '14},
+ year = {2014},
+ isbn = {978-1-4503-2474-8},
+ location = {Toronto, Ontario, Canada},
+ pages = {21--24},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2559206.2559222},
+ doi = {10.1145/2559206.2559222},
+ acmid = {2559222},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {collaboration, digital art, interaction, interdisciplinary, performance art},
 }
 
 
@@ -20,6 +49,49 @@
 	Year = 2007}
 
 
+@book{Manovich:2002ly,
+	Address = {Cambridge, MA, USA},
+	Author = {Lev Manovich},
+	Publisher = {MIT Press},
+	Title = {The Language of New Media},
+	Year = {2002}}
+
+
+@inproceedings{Martin:2014cr,
+	Acmid = {2557226},
+	Address = {New York, NY, USA},
+	Author = {Martin, Charles and Gardner, Henry and Swift, Ben},
+	Booktitle = {Proc. CHI '14},
+	Date-Added = {2014-04-26 22:46:30 +0000},
+	Date-Modified = {2015-07-21 06:11:01 +0000},
+	Isbn = {978-1-4503-2473-1},
+	Keywords = {expression, gesture, multitouch, music, percussion, user experience},
+	Location = {Toronto, Ontario, Canada},
+	Numpages = {4},
+	Pages = {1025--1028},
+	Publisher = {ACM},
+	Title = {Exploring Percussive Gesture on i{P}ads with {E}nsemble {M}etatone},
+	Year = {2014}} 
+
+
+
+@techreport{Resnick:2005yu,
+	Author = {Resnick, Mitchel and Myers, Brad and Nakakoji, Kumiyo and Shneiderman, Ben and Pausch, Randy and Selker, Ted and Eisenberg, Mike},
+	Institution = {Institute for Software Research, School of Computer Science, Carnegie Mellon University},
+	Title = {Design principles for tools to support creative thinking},
+	Url = {http://repository.cmu.edu/isr/816},
+	Year = {2005}}
+
+
+@book{Schick:2006fk,
+	Address = {Rochester, NY, USA},
+	Author = {Steven Schick},
+	Date-Added = {2013-09-11 05:34:45 +0000},
+	Date-Modified = {2015-09-20 11:13:20 +0000},
+	Publisher = {University of Rochester Press},
+	Title = {The Percussionist's Art: Same Bed, Different Dreams},
+	Year = {2006}}
+
 @article{Shannon:1948rt,
 	Author = {C. E. Shannon},
 	Date-Added = {2015-08-25 01:43:52 +0000},
@@ -34,35 +106,42 @@
 }
 
 
-@article{Breiman:2001kx,
-	Author = {Breiman, Leo},
-	Journal = {Machine Learning},
-	Number = {1},
-	Pages = {5-32},
-	Title = {Random Forests},
-	Volume = {45},
-	Year = {2001}}
-
-
-@article{scikit-learn,
-	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
-	Journal = {Journal of Machine Learning Research},
-	Pages = {2825--2830},
-	Title = {Scikit-learn: Machine Learning in {P}ython},
-	Volume = {12},
-	Year = {2011}}
-
+@article{Shneiderman:2007qv,
+ author = {Shneiderman, Ben},
+ title = {Creativity Support Tools: Accelerating Discovery and Innovation},
+ journal = {Commun. ACM},
+ issue_date = {December 2007},
+ volume = {50},
+ number = {12},
+ month = dec,
+ year = {2007},
+ issn = {0001-0782},
+ pages = {20--32},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/1323688.1323689},
+ doi = {10.1145/1323688.1323689},
+ acmid = {1323689},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
 
 @inproceedings{Swift:2014tya,
-	Author = {Swift, Ben and Sorensen, Andrew and Martin, Michael and Gardner, Henry J},
-	Booktitle = {Proc. CHI '14},
-	Date-Added = {2015-01-20 05:33:18 +0000},
-	Date-Modified = {2015-01-20 05:33:18 +0000},
-	Publisher = {ACM Press},
-	Title = {{Coding Livecoding}},
-	Year = 2014
- }
-
+ author = {Swift, Ben and Sorensen, Andrew and Martin, Michael and Gardner, Henry},
+ title = {Coding Livecoding},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '14},
+ year = 2014,
+ isbn = {978-1-4503-2473-1},
+ location = {Toronto, Ontario, Canada},
+ pages = {1021--1024},
+ numpages = 4,
+ url = {http://doi.acm.org/10.1145/2556288.2557049},
+ doi = {10.1145/2556288.2557049},
+ acmid = 2557049,
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {creativity support tools, end-user programming},
+} 
 
 @article{Thimbleby:2001kq,
 	Acmid = 376941,
@@ -80,7 +159,7 @@
 	Title = {Usability Analysis with Markov Models},
 	Volume = 8,
 	Year = 2001
-  }
+  } 
 
 
 @article{Thimbleby:2004fj,
@@ -109,73 +188,28 @@
 	Title = {Modern applied statistics with S},
 	Year = 2002}
 
-
-@techreport{Resnick:2005yu,
-	Author = {Resnick, Mitchel and Myers, Brad and Nakakoji, Kumiyo and Shneiderman, Ben and Pausch, Randy and Selker, Ted and Eisenberg, Mike},
-	Institution = {Institute for Software Research, School of Computer Science, Carnegie Mellon University},
-	Title = {Design principles for tools to support creative thinking},
-	Url = {http://repository.cmu.edu/isr/816},
-	Year = {2005}}
-
-@article{Shneiderman:2007qv,
- author = {Shneiderman, Ben},
- title = {Creativity Support Tools: Accelerating Discovery and Innovation},
- journal = {Commun. ACM},
- issue_date = {December 2007},
- volume = {50},
- number = {12},
- month = dec,
- year = {2007},
- issn = {0001-0782},
- pages = {20--32},
- numpages = {13},
- url = {http://doi.acm.org/10.1145/1323688.1323689},
- doi = {10.1145/1323688.1323689},
- acmid = {1323689},
- publisher = {ACM},
- address = {New York, NY, USA},
-} 
-
-@inproceedings{England:2014ys,
- author = {England, David and Spence, Jocelyn and Latulipe, Celine and Edmonds, Ernest and Candy, Linda and Schiphorst, Thecla and Bryan-Kinns, Nick and Woolford, Kirk},
- title = {Curating the Digital: Spaces for Art and Interaction},
- booktitle = {CHI '14 Extended Abstracts on Human Factors in Computing Systems},
- series = {CHI EA '14},
- year = {2014},
- isbn = {978-1-4503-2474-8},
- location = {Toronto, Ontario, Canada},
- pages = {21--24},
+@inproceedings{Wilson:2011ve,
+ author = {Wilson, Max L. and Mackay, Wendy and Chi, Ed and Bernstein, Michael and Russell, Dan and Thimbleby, Harold},
+ title = {RepliCHI - CHI Should Be Replicating and Validating Results More: Discuss},
+ booktitle = {CHI '11 Extended Abstracts on Human Factors in Computing Systems},
+ series = {CHI EA '11},
+ year = {2011},
+ isbn = {978-1-4503-0268-5},
+ location = {Vancouver, BC, Canada},
+ pages = {463--466},
  numpages = {4},
- url = {http://doi.acm.org/10.1145/2559206.2559222},
- doi = {10.1145/2559206.2559222},
- acmid = {2559222},
+ url = {http://doi.acm.org/10.1145/1979742.1979491},
+ doi = {10.1145/1979742.1979491},
+ acmid = {1979491},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {collaboration, digital art, interaction, interdisciplinary, performance art},
-} 
+ keywords = {hci, replication, research, science},
+}
 
-
-@inproceedings{Martin:2014cr,
-	Acmid = {2557226},
-	Address = {New York, NY, USA},
-	Author = {Martin, Charles and Gardner, Henry and Swift, Ben},
-	Booktitle = {Proc. CHI '14},
-	Date-Added = {2014-04-26 22:46:30 +0000},
-	Date-Modified = {2015-07-21 06:11:01 +0000},
-	Isbn = {978-1-4503-2473-1},
-	Keywords = {expression, gesture, multitouch, music, percussion, user experience},
-	Location = {Toronto, Ontario, Canada},
-	Numpages = {4},
-	Pages = {1025--1028},
-	Publisher = {ACM},
-	Title = {Exploring Percussive Gesture on i{P}ads with {E}nsemble {M}etatone},
-	Year = {2014}}
-
-
-@book{Schick:2006fk,
-	Author = {Steven Schick},
-	Date-Added = {2013-09-11 05:34:45 +0000},
-	Date-Modified = {2013-09-11 05:35:45 +0000},
-	Publisher = {University of Rochester Press},
-	Title = {The Percussionist's Art: Same Bed, Different Dreams},
-	Year = {2006}}
+@article{scikit-learn,
+	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+	Journal = {Journal of Machine Learning Research},
+	Pages = {2825--2830},
+	Title = {Scikit-learn: Machine Learning in {P}ython},
+	Volume = {12},
+	Year = {2011}} 
