--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -213,3 +213,14 @@
 	Title = {Scikit-learn: Machine Learning in {P}ython},
 	Volume = {12},
 	Year = {2011}} 
+
+
+@inproceedings{Kannampallil:2007fp,
+	Articleno = {142},
+	Author = {Kannampallil, Thomas and Haynes, Steven},
+	Booktitle = {Americas Conference on Information Systems},
+	Date-Added = {2015-09-20 11:59:54 +0000},
+	Date-Modified = {2015-09-20 12:04:49 +0000},
+	Title = {Using Event Based Markov Model Simulation to Analyze Interactive Human Behavior},
+	Url = {http://aisel.aisnet.org/amcis2007/142},
+	Year = {2007}}
